--- a/dota2_7_33_analysis.ipynb
+++ b/dota2_7_33_analysis.ipynb
@@ -8,6 +8,8 @@
     "# DotA 2: Patch 7.33\n",
     "## What has changed in the economy?\n",
     "\n",
+    "![](https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/clans/3703047/a85289fa2be0854a08a57f8c76d927c1cd38e385.jpg)\n",
+    "\n",
     "DotA 2's newest patch came with an overhaul of long awaited changes. Some of the notable ones include an increased map size (up to 40% from before!), change in Roshan's location and the addition of new objectives. As a result, the game's economy has also been affected.\n",
     "\n",
     "Some of the changes that impact the gold available on the map were:\n",
@@ -798,13 +800,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "csv_path = os.getcwd() + '\\data'\n",
+    "\n",
     "# Creating csv files\n",
-    "gold_old.to_csv('patch 7_32 gold.csv', sep = ';', index = False)\n",
-    "gold_old.to_csv('patch 7_33 gold.csv', sep = ';', index = False)"
+    "gold_old.to_csv(os.path.join(csv_path,'patch 7_32 gold.csv'), sep = ';', index = False)\n",
+    "gold_old.to_csv(os.path.join(csv_path,'patch 7_33 gold.csv'), sep = ';', index = False)"
    ]
   },
   {
@@ -932,71 +937,71 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_b29f3\">\n",
+       "<table id=\"T_8113a\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_b29f3_level0_col0\" class=\"col_heading level0 col0\" >minute</th>\n",
-       "      <th id=\"T_b29f3_level0_col1\" class=\"col_heading level0 col1\" >old</th>\n",
-       "      <th id=\"T_b29f3_level0_col2\" class=\"col_heading level0 col2\" >new</th>\n",
-       "      <th id=\"T_b29f3_level0_col3\" class=\"col_heading level0 col3\" >%diff</th>\n",
+       "      <th id=\"T_8113a_level0_col0\" class=\"col_heading level0 col0\" >minute</th>\n",
+       "      <th id=\"T_8113a_level0_col1\" class=\"col_heading level0 col1\" >old</th>\n",
+       "      <th id=\"T_8113a_level0_col2\" class=\"col_heading level0 col2\" >new</th>\n",
+       "      <th id=\"T_8113a_level0_col3\" class=\"col_heading level0 col3\" >%diff</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_b29f3_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_b29f3_row0_col0\" class=\"data row0 col0\" >0</td>\n",
-       "      <td id=\"T_b29f3_row0_col1\" class=\"data row0 col1\" >1,502</td>\n",
-       "      <td id=\"T_b29f3_row0_col2\" class=\"data row0 col2\" >1,502</td>\n",
-       "      <td id=\"T_b29f3_row0_col3\" class=\"data row0 col3\" >0.0%</td>\n",
+       "      <th id=\"T_8113a_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_8113a_row0_col0\" class=\"data row0 col0\" >0</td>\n",
+       "      <td id=\"T_8113a_row0_col1\" class=\"data row0 col1\" >1,502</td>\n",
+       "      <td id=\"T_8113a_row0_col2\" class=\"data row0 col2\" >1,502</td>\n",
+       "      <td id=\"T_8113a_row0_col3\" class=\"data row0 col3\" >0.0%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b29f3_level0_row1\" class=\"row_heading level0 row1\" >20</th>\n",
-       "      <td id=\"T_b29f3_row1_col0\" class=\"data row1 col0\" >10</td>\n",
-       "      <td id=\"T_b29f3_row1_col1\" class=\"data row1 col1\" >34,413</td>\n",
-       "      <td id=\"T_b29f3_row1_col2\" class=\"data row1 col2\" >46,094</td>\n",
-       "      <td id=\"T_b29f3_row1_col3\" class=\"data row1 col3\" >33.9%</td>\n",
+       "      <th id=\"T_8113a_level0_row1\" class=\"row_heading level0 row1\" >20</th>\n",
+       "      <td id=\"T_8113a_row1_col0\" class=\"data row1 col0\" >10</td>\n",
+       "      <td id=\"T_8113a_row1_col1\" class=\"data row1 col1\" >34,413</td>\n",
+       "      <td id=\"T_8113a_row1_col2\" class=\"data row1 col2\" >46,094</td>\n",
+       "      <td id=\"T_8113a_row1_col3\" class=\"data row1 col3\" >33.9%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b29f3_level0_row2\" class=\"row_heading level0 row2\" >40</th>\n",
-       "      <td id=\"T_b29f3_row2_col0\" class=\"data row2 col0\" >20</td>\n",
-       "      <td id=\"T_b29f3_row2_col1\" class=\"data row2 col1\" >70,129</td>\n",
-       "      <td id=\"T_b29f3_row2_col2\" class=\"data row2 col2\" >96,314</td>\n",
-       "      <td id=\"T_b29f3_row2_col3\" class=\"data row2 col3\" >37.3%</td>\n",
+       "      <th id=\"T_8113a_level0_row2\" class=\"row_heading level0 row2\" >40</th>\n",
+       "      <td id=\"T_8113a_row2_col0\" class=\"data row2 col0\" >20</td>\n",
+       "      <td id=\"T_8113a_row2_col1\" class=\"data row2 col1\" >70,129</td>\n",
+       "      <td id=\"T_8113a_row2_col2\" class=\"data row2 col2\" >96,314</td>\n",
+       "      <td id=\"T_8113a_row2_col3\" class=\"data row2 col3\" >37.3%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b29f3_level0_row3\" class=\"row_heading level0 row3\" >60</th>\n",
-       "      <td id=\"T_b29f3_row3_col0\" class=\"data row3 col0\" >30</td>\n",
-       "      <td id=\"T_b29f3_row3_col1\" class=\"data row3 col1\" >109,134</td>\n",
-       "      <td id=\"T_b29f3_row3_col2\" class=\"data row3 col2\" >149,276</td>\n",
-       "      <td id=\"T_b29f3_row3_col3\" class=\"data row3 col3\" >36.8%</td>\n",
+       "      <th id=\"T_8113a_level0_row3\" class=\"row_heading level0 row3\" >60</th>\n",
+       "      <td id=\"T_8113a_row3_col0\" class=\"data row3 col0\" >30</td>\n",
+       "      <td id=\"T_8113a_row3_col1\" class=\"data row3 col1\" >109,134</td>\n",
+       "      <td id=\"T_8113a_row3_col2\" class=\"data row3 col2\" >149,276</td>\n",
+       "      <td id=\"T_8113a_row3_col3\" class=\"data row3 col3\" >36.8%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b29f3_level0_row4\" class=\"row_heading level0 row4\" >80</th>\n",
-       "      <td id=\"T_b29f3_row4_col0\" class=\"data row4 col0\" >40</td>\n",
-       "      <td id=\"T_b29f3_row4_col1\" class=\"data row4 col1\" >154,168</td>\n",
-       "      <td id=\"T_b29f3_row4_col2\" class=\"data row4 col2\" >207,006</td>\n",
-       "      <td id=\"T_b29f3_row4_col3\" class=\"data row4 col3\" >34.3%</td>\n",
+       "      <th id=\"T_8113a_level0_row4\" class=\"row_heading level0 row4\" >80</th>\n",
+       "      <td id=\"T_8113a_row4_col0\" class=\"data row4 col0\" >40</td>\n",
+       "      <td id=\"T_8113a_row4_col1\" class=\"data row4 col1\" >154,168</td>\n",
+       "      <td id=\"T_8113a_row4_col2\" class=\"data row4 col2\" >207,006</td>\n",
+       "      <td id=\"T_8113a_row4_col3\" class=\"data row4 col3\" >34.3%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b29f3_level0_row5\" class=\"row_heading level0 row5\" >100</th>\n",
-       "      <td id=\"T_b29f3_row5_col0\" class=\"data row5 col0\" >50</td>\n",
-       "      <td id=\"T_b29f3_row5_col1\" class=\"data row5 col1\" >204,499</td>\n",
-       "      <td id=\"T_b29f3_row5_col2\" class=\"data row5 col2\" >268,724</td>\n",
-       "      <td id=\"T_b29f3_row5_col3\" class=\"data row5 col3\" >31.4%</td>\n",
+       "      <th id=\"T_8113a_level0_row5\" class=\"row_heading level0 row5\" >100</th>\n",
+       "      <td id=\"T_8113a_row5_col0\" class=\"data row5 col0\" >50</td>\n",
+       "      <td id=\"T_8113a_row5_col1\" class=\"data row5 col1\" >204,499</td>\n",
+       "      <td id=\"T_8113a_row5_col2\" class=\"data row5 col2\" >268,724</td>\n",
+       "      <td id=\"T_8113a_row5_col3\" class=\"data row5 col3\" >31.4%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b29f3_level0_row6\" class=\"row_heading level0 row6\" >120</th>\n",
-       "      <td id=\"T_b29f3_row6_col0\" class=\"data row6 col0\" >60</td>\n",
-       "      <td id=\"T_b29f3_row6_col1\" class=\"data row6 col1\" >259,347</td>\n",
-       "      <td id=\"T_b29f3_row6_col2\" class=\"data row6 col2\" >333,927</td>\n",
-       "      <td id=\"T_b29f3_row6_col3\" class=\"data row6 col3\" >28.8%</td>\n",
+       "      <th id=\"T_8113a_level0_row6\" class=\"row_heading level0 row6\" >120</th>\n",
+       "      <td id=\"T_8113a_row6_col0\" class=\"data row6 col0\" >60</td>\n",
+       "      <td id=\"T_8113a_row6_col1\" class=\"data row6 col1\" >259,347</td>\n",
+       "      <td id=\"T_8113a_row6_col2\" class=\"data row6 col2\" >333,927</td>\n",
+       "      <td id=\"T_8113a_row6_col3\" class=\"data row6 col3\" >28.8%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2a44708c850>"
+       "<pandas.io.formats.style.Styler at 0x187028768e0>"
       ]
      },
      "execution_count": 17,
@@ -1840,7 +1845,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Alt text](map_gold_1.PNG) "
+    "![Map1](images/map_gold_1.PNG)"
    ]
   },
   {
@@ -1852,11 +1857,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "![Alt text](map_gold_2.PNG)"
+    "![Map2](images/map_gold_2.PNG)"
    ]
   },
   {
