correcting csv file and adding images

--- a/dota2_7_33_analysis.ipynb
+++ b/dota2_7_33_analysis.ipynb
@@ -8,7 +8,7 @@
     "# DotA 2: Patch 7.33\n",
     "## What has changed in the economy?\n",
     "\n",
-    "![](https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/clans/3703047/a85289fa2be0854a08a57f8c76d927c1cd38e385.jpg)\n",
+    "![](https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/clans/3703047/a85289fa2be0854a08a57f8c76d927c1cd38e385.jpg \"Patch 7.33\")\n",
     "\n",
     "DotA 2's newest patch came with an overhaul of long awaited changes. Some of the notable ones include an increased map size (up to 40% from before!), change in Roshan's location and the addition of new objectives. As a result, the game's economy has also been affected.\n",
     "\n",
@@ -160,7 +160,7 @@
    "source": [
     "- The melee creeps are the most numerous creeps in any given wave. They have more health but lower damage than ranged creeps. \n",
     "\n",
-    "    ![Radiant melee creep](https://static.wikia.nocookie.net/dota2_gamepedia/images/e/e7/Melee_Creep_Radiant_model.png/revision/latest/scale-to-width-down/250?cb=20160318190437) ![Dire melee creep](https://static.wikia.nocookie.net/dota2_gamepedia/images/a/a9/Melee_Creep_Dire_model.png/revision/latest/scale-to-width-down/250?cb=20160318190431)"
+    "    ![](https://static.wikia.nocookie.net/dota2_gamepedia/images/e/e7/Melee_Creep_Radiant_model.png/revision/latest/scale-to-width-down/250?cb=20160318190437 \"Radiant melee creep\") ![](https://static.wikia.nocookie.net/dota2_gamepedia/images/a/a9/Melee_Creep_Dire_model.png/revision/latest/scale-to-width-down/250?cb=20160318190431 \"Dire melee creep\")"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "source": [
     "- Ranged creeps, as the name suggest, can attack their targets from a distance. Also they do more damage to other creeps, but come with less health than melee creeps.\n",
     "\n",
-    "    ![Radiant ranged creep](https://static.wikia.nocookie.net/dota2_gamepedia/images/0/0b/Ranged_Creep_Radiant_model.png/revision/latest/scale-to-width-down/250?cb=20160318190439) ![Dire ranged creep](https://static.wikia.nocookie.net/dota2_gamepedia/images/3/3f/Ranged_Creep_Dire_model.png/revision/latest/scale-to-width-down/250?cb=20160318190433)"
+    "    ![](https://static.wikia.nocookie.net/dota2_gamepedia/images/0/0b/Ranged_Creep_Radiant_model.png/revision/latest/scale-to-width-down/250?cb=20160318190439 \"Radiant ranged creep\") ![](https://static.wikia.nocookie.net/dota2_gamepedia/images/3/3f/Ranged_Creep_Dire_model.png/revision/latest/scale-to-width-down/250?cb=20160318190433 \"Dire ranged creep\")"
    ]
   },
   {
@@ -180,7 +180,7 @@
    "source": [
     "- Flagbearers start appearing every minute from the 2:00 minute wave and onwards, replacing one of the melee creeps in the wave. In addition to having a unique aura that increases the health regen of nearby allies, flagbearer's also grants bonus gold for nearby heroes when killed. They have the same appearance as a melee creep, but they carry a flag.\n",
     "\n",
-    "    ![Flagbearer creep](https://static.wikia.nocookie.net/dota2_gamepedia/images/9/93/Inspiration_Aura_%28Flagbearer_Creep%29_icon.png/revision/latest/scale-to-width-down/128?cb=20220824110455)"
+    "    ![](https://static.wikia.nocookie.net/dota2_gamepedia/images/9/93/Inspiration_Aura_%28Flagbearer_Creep%29_icon.png/revision/latest/scale-to-width-down/128?cb=20220824110455 \"Flagbearer creep icon\")"
    ]
   },
   {
@@ -190,7 +190,7 @@
    "source": [
     "- Siege creeps, often called catapults, appear more sparsely over the match, spawning every 5 minutes starting from the 5:00 minute mark. They have higher health and higher magic resistance than other types of creeps, and their main trait is the ability to deal more damage to structures, often prioritizing them over heroes and other creeps.\n",
     "\n",
-    "    ![Radiant siege creep](https://static.wikia.nocookie.net/dota2_gamepedia/images/5/56/Siege_Creep_Radiant_model.png/revision/latest/scale-to-width-down/250?cb=20160318190445) ![Dire siege creep](https://static.wikia.nocookie.net/dota2_gamepedia/images/6/6a/Siege_Creep_Dire_model.png/revision/latest/scale-to-width-down/250?cb=20160318190437)"
+    "    ![](https://static.wikia.nocookie.net/dota2_gamepedia/images/5/56/Siege_Creep_Radiant_model.png/revision/latest/scale-to-width-down/250?cb=20160318190445 \"Radiant siege creep\") ![](https://static.wikia.nocookie.net/dota2_gamepedia/images/6/6a/Siege_Creep_Dire_model.png/revision/latest/scale-to-width-down/250?cb=20160318190437 \"Dire siege creep\")"
    ]
   },
   {
@@ -427,7 +427,7 @@
    "source": [
     "Neutral creeps are called like that because they are not aligned to either team, they provide additional resources for players to farm. _Jungle creeps_, as they are often called, can be found in the jungle camps scattered across the map.\n",
     "\n",
-    "![Neutrals](https://static.wikia.nocookie.net/dota2_gamepedia/images/7/7e/Neutral_creeps.png/revision/latest?cb=20161007194127)\n",
+    "![](https://static.wikia.nocookie.net/dota2_gamepedia/images/7/7e/Neutral_creeps.png/revision/latest?cb=20161007194127 \"Neutral creeps\")\n",
     "\n",
     "Neutrals start spawning on the 1:00 minute mark, and procceed to spawn every minute after, as long as there's no unit nearby them when the next minute mark happen. This also include the jungle creeps, meaning that if they are inside their camp, new creeps won't spawn.\n",
     "\n",
@@ -465,7 +465,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![7.33 map](https://preview.redd.it/pu7njqljqfva1.png?width=2048&format=png&auto=webp&v=enabled&s=62ab29810012838aa5048ec5f78a6dcc017c83ca)\n",
+    "![](https://preview.redd.it/pu7njqljqfva1.png?width=2048&format=png&auto=webp&v=enabled&s=62ab29810012838aa5048ec5f78a6dcc017c83ca \"7.33 Map\")\n",
     "\n",
     "_Patch 7.33 map, credit to [u/RantiNasha](https://www.reddit.com/r/DotA2/comments/12v0lb4/733_i_created_an_updated_version_of_all_neutral/) on r/DotA2._"
    ]
@@ -674,7 +674,7 @@
    "source": [
     "Since the game wasn't complex enough, patch 7.33 added another objective: Tormentors.\n",
     "\n",
-    "![](https://hawk.live/storage/post-images/tormentor-mini-boss-dota-2-2054.JPG)\n",
+    "![](https://hawk.live/storage/post-images/tormentor-mini-boss-dota-2-2054.JPG \"Tormentors\")\n",
     "\n",
     " These are neutral creeps that can reflect damage they take and grow stronger each time they are killed. They spawn at the 20:00 minute mark, and respawn after 10 min of its death. Killing a Tormentor rewards the player with a 250 gold bounty, and additionaly grants an Aghanim's Shard to one of the two lowest networth allied heroes that still don't have a Shard when it dies. If all heroes have their shards, it will instead give 280 gold and 280 experience to each player of the team. Since the Aghanim's Shard costs 1.400 gold, we can consider that each kill provides 1.400 gold for the team and an additional 250 gold to the player that has last-hitted the mini-boss."
    ]
@@ -805,6 +805,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "csv_path = os.getcwd() + '\\data'\n",
     "\n",
     "# Creating csv files\n",
@@ -1845,7 +1846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Map1](images/map_gold_1.PNG)"
+    "![](images/map_gold_1.PNG)"
    ]
   },
   {
@@ -1861,7 +1862,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Map2](images/map_gold_2.PNG)"
+    "![](images/map_gold_2.PNG)"
    ]
   },
   {
